# libriccore

./: .gitignore  CMakeLists.txt  README.md  library.json
include/: CMakeLists.txt
include/headers/: fs.h  thread.h
include/impl/esp32/: README.md
include/impl/unix/: config.h  fs.cpp  thread.cpp
src/: CMakeLists.txt  main.cpp
src/libriccore/: logcontroller_sketch.h  riccorelogging.h  riccoresystem.h  riccoretypes.h
src/libriccore/commands/: commandHandler.cpp  commandHandler.h  commandhandler.h  commandhandler_config_default.h  commandhandler_config_tweak.h  commandhandlertypes.h  commands_default.h
src/libriccore/filtering/: movingAvg.h
src/libriccore/fsm/: state.h  statemachine.cpp  statemachine.h
src/libriccore/logging/: iloggerhandler.cpp  iloggerhandler.h  loggerhandler.h  loggerhandler_config.h  loggerhandler_config_default.h  loggerhandler_config_tweak.h  loggerhandler_default.h  loggerhandler_tweak.h
src/libriccore/logging/loggers/: coutlogger.h  loggerbase.h  multisink.h  rnpmessagelogger.h  syslogger.h
src/libriccore/networkinterfaces/: canbus.cpp  canbus.h  uart.cpp  uart.h
src/libriccore/networkinterfaces/can/: canbus.h  rnpcanidentifier.h
src/libriccore/networkinterfaces/serial/: cobs.h  streamserial.h
src/libriccore/networkinterfaces/uart/: cobs.h  uart.h
src/libriccore/platform/: CMakeLists.txt  HardwareSerial.h  README.md  config.h  millis.h  riccorethread.h  riccorethread_types.h  thread.h
src/libriccore/platform/esp32/: ADC.h  CMakeLists.txt  HardwareSerial.h  LEDC.h  PCNT.h  freertos_lock.h  millis.h  riccorethread.cpp  riccorethread_types.h  thread.cpp  threadtypes.h
src/libriccore/platform/unix/: CMakeLists.txt  HardwareSerial_stub.h  README.md  millis_stub.h  riccorethread.cpp  riccorethread_types.h  thread.cpp  threadtypes.h  uniqueptrchannel.h  unix_lock.h  virtualserialport.h
src/libriccore/storage/: CMakeLists.txt  appendrequest.h  rfile.h  rfile.h.old  store_base.cpp  store_base.h  store_base.h.old  storebase.cpp  storebase.h  storetypes.h  wrappedfile.cpp  wrappedfile.h
src/libriccore/systemstatus/: defaultsystemflags.h  systemflags_config.h  systemflags_config_default.h  systemflags_config_tweak.h  systemflags_default.h  systemflags_tweak.h  systemstatus.h
src/libriccore/threading/: riccorethread.h  scopedlock.h  uniqueptrchannel.h
src/libriccore/util/: bitsethelpers.h  isdetected.h  istuple.h  millis_stub.h
src/store/: rfile.h  store_base.cpp  store_base.h
test/: main.cpp
tests/fsm_test/: CMakeLists.txt  main.cpp
tests/loggerhandler_tests/: CMakeLists.txt  main.cpp
tests/threading_test/: CMakeLists.txt  main.cpp
tests/virtualserialport_test/: CMakeLists.txt  main.cpp
